--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Don't ignore thirdparty libraries
+!ThirdPrty**/*.lib
+!ThirdPrty**/*.dll
+!ThirdPrty**/*.exp
+!ThirdPrty**/*.pdb
